2009-09-07 yusuke
* Replace ERP5Report to ERP5Form and ReportBox

2009-07-02 romain
* Revert latest proxy field library simplification, as the design was not finalized.

2009-05-18 yusei
* Fix some proxy fields. count_method should not be inherited from template field and proxy_listbox_ids had to be copied to new proxified fields but it was not copied.

2009-05-07 yusei
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
* Update dependencies. Now require erp5_core 5.4.3.

2009-05-06 Jerome
* Introduce recursive accounting periods, used for example for monthly intermediate periods. They do not create balance transaction, but prevent adding more transaction for this period.

2009-04-18 Kazuhiko
* Version 5.4.1

2009-02-06 yo
* Stop raising an exception, even if the credit is not equal to the debit in a built delivery, in the post processing script, because the builder may not blindly adopt prevision when updating existing lines, thus it can be unbalanced.

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-24 yusei
* Use translation of payment_mode category in the journal dialog.

2008-10-24 yusei
* Use translated role name in entity_role field in third party report.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-16 Kazuhiko
* remove payment_transaction_builder because now it is included in erp5_invoicing.
* use  delivery_causality_workflow instead of invoice_causality_workflow in Purchase Invoice Transaction and Sale Invoice Transaction.

2008-09-07 yusei
* Replace "+" with " " in translation messages.

2008-09-04 jerome
* Add profile tab on all accounting transaction types

2008-09-04 yusei
* Update English messages

2008-09-03 yusei
* Remove text which is not suitable for translation.

2008-08-29 yusei
* Replace abbreviation in action title.

2008-08-28 yusei
* Use translateString or Base_translateString instead of N_ for translation message.

2008-07-02 yusei